fixtures/e2e/todo.txt.d/lists.d/invalid/unknown-filter.list
---
name: With Unknown Filter
icon: ⚠️
description: Unrecognized filter line is silently skipped; valid lines still apply
---
foobar baz quux
due <= today

sort by due asc
